<?xml version="1.0"?>

<package format="2">
  <name>husky_3d_mapping</name>
  <version>0.0.0</version>
  <description>The 3d-mapping package creates an octomap using kinect sensor mounted on Clearpath Husky robot.</description>
  
  <license>TODO</license>
  <maintainer email="himanshu@ee.iitr.ac.in">Himanshu</maintainer>
  <url type="repository">https://github.com/htanwar922/husky</url>
  <author email="himanshu@ee.iitr.ac.in">Himanshu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>  

  <build_depend>message_generation</build_depend>
  <build_depend>husky_gazebo</build_depend>
  <build_depend>octomap_server</build_depend>
  <build_depend>teleop_twist_joy</build_depend>
  <build_depend>teleop_twist_keyboard</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>husky_gazebo</build_export_depend>
  <build_export_depend>octomap_server</build_export_depend>
  <build_export_depend>teleop_twist_joy</build_export_depend>
  <build_export_depend>teleop_twist_keyboard</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>husky_gazebo</exec_depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <!-- <test_depend>gtest</test_depend> -->
  <!-- <doc_depend>doxygen</doc_depend> -->
  <export></export>   <!-- The export tag contains other, unspecified, tags. Other tools can request additional information be placed here -->
  
</package>

<!--
  ## * Let MSG_DEP_SET be the set of packages whose message types you use in your messages/services/actions (e.g. std_msgs, actionlib_msgs, ...).
  ##   * add a build_depend and a exec_depend tag for each package in MSG_DEP_SET
-->